# dinrplan

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Procfile  README.md  fly.toml  main.py  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: black.yml  deploy.yml  main.yml  pre-commit.yml  prettier.yml  pythonapp.yml  test.yml  tests.yml
.kiro/steering/: product.md  structure.md  tech.md
accounts/: views.py
accounts/forms/: sign_up_form.py
dinrplan/: asgi.py  settings.py  urls.py  wsgi.py
planner/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
planner/migrations/: 0001_initial.py  0002_initial.py  0003_auto_20211106_2121.py  0004_auto_20211114_2041.py  0005_auto_20211117_2002.py  0006_comment.py  0007_auto_20211118_2041.py  0008_auto_20211118_2220.py  0009_alter_meal_categories.py  0010_meal_is_recipe.py
planner/static/planner/: color_mode_toggler.js  day.js  index.css
planner/templates/planner/: createcomment.html  day.html  day_table_row.html  editday.html  index.html  meal_detail.html  recipes.html  updatemeal.html  upload_json.html  weeks.html
planner/templates/planner/modals/: day.html  edit_day.html  edit_meal.html  show_day.html  show_meal.html
planner/tests/: conftest.py  test_comment.py  test_day.py  test_day_view.py  test_drag.py  test_index.py  test_meal.py  test_poetry_lock.py  test_recipes.py  test_show_meal.py  test_update_meal.py  test_upload.py
planner/tests/fixtures/: days.json  meals.json
planner/tests/live_server/: test_day.py
templates/: base.html
templates/registration/: login.html  signup.html
users/: models.py
users/migrations/: 0001_initial.py  0002_auto_20211121_2118.py
