[project]
name = "dinrplan"
version = "0.1.0"
description = "Meal planner/recipe database built with Python, Django and PostgreSQL"
readme = "README.md"
authors = [
    {name = "Filip Lange", email = "filip.lange@gmail.com"}
]

requires-python = ">=3.9"

dependencies = [
    "Django==3.2.9",
    "django-heroku==0.3.1",
    "psycopg2-binary==2.9.1",
    "python-dotenv==0.19.2",
    "gunicorn==20.1.0",
    "black==22.8.0",
    "coverage==6.1.2",
    "playwright==1.17.0",
    "pre-commit==2.15.0",
    "pyreadline3==3.3",
    "pytest==6.2.5",
    "pytest-django==4.4.0",
    "pytest-playwright==0.2.2"
]


[tool.hatch]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
