[project]
name = "dinrplan"
version = "0.1.0"
description = "Meal planner/recipe database built with Python, Django and PostgreSQL"
readme = "README.md"
authors = [
    {name = "Filip Lange", email = "filip.lange@gmail.com"}
]

requires-python = ">=3.13"

dependencies = [
    "Django==6.0.7",
    "django-environ==0.14.0",
    "psycopg2-binary==2.9.12",
    "gunicorn==26.0.0",
    "black==26.5.1",
    "coverage==7.15.2",
    "playwright==1.61.0",
    "pre-commit==4.6.0",
    "pyreadline3==3.5.6",
    "pytest==9.1.1",
    "pytest-django==4.12.0",
    "pytest-playwright==0.8.0",
    "pytest-cov==7.1.0",
    "whitenoise==6.12.0"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.uv.scripts]
server = "python manage.py runserver"
